--- a/db-scoreboard/src/styles/scoreBanner.css
+++ b/db-scoreboard/src/styles/scoreBanner.css
@@ -49,12 +49,26 @@
 .player-name {
     grid-column: 3;
     grid-row:0;
-    font-family: Arial, Helvetica, sans-serif;
+    /* font-family: Arial, Helvetica, sans-serif; */
     position:absolute;
+    font-family: "MedievalSharp";
+    font-size: 55px;
 }
 .player-points {
     grid-column: 3;
     grid-row:3;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: "MedievalSharp";
     position:absolute;
+    color: rgb(0, 204, 0);
+    font-weight: bold;
+}
+.scoreboard-title {
+    font-family: "MedievalSharp";
+    font-size: 100px;
+}
+.scoreboard-target-points {
+    font-family: "MedievalSharp";
+}
+.points-to-win {
+    color: goldenrod;
 }
